--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
 		"unistd.h": "c",
 		"string": "c",
 		"string_view": "c",
-		"ctype.h": "c"
+		"ctype.h": "c",
+		"sstream": "c",
+		"stdio.h": "c",
+		"stdlib.h": "c"
 	}
 }
