--- a/haskell/life.cabal
+++ b/haskell/life.cabal
@@ -36,6 +36,7 @@ library
   build-depends:
       HUnit
     , base >=4.7 && <5
+    , ghc
   default-language: Haskell2010
 
 executable life-exe
@@ -50,6 +51,7 @@ executable life-exe
   build-depends:
       HUnit
     , base >=4.7 && <5
+    , ghc
     , life
   default-language: Haskell2010
 
@@ -66,5 +68,6 @@ test-suite life-test
   build-depends:
       HUnit
     , base >=4.7 && <5
+    , ghc
     , life
   default-language: Haskell2010
