--- a/haskell/package.yaml
+++ b/haskell/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/znic
 dependencies:
 - base >= 4.7 && < 5
 - HUnit
+- ghc
 
 ghc-options:
 - -Wall
